--- a/wp7-donor/Donor/NewsPage.xaml
+++ b/wp7-donor/Donor/NewsPage.xaml
@@ -31,8 +31,14 @@
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
             <ScrollViewer>
             <StackPanel>
-                    <TextBlock Text="{Binding Path=Title}" Name="TitleNews" Style="{StaticResource Text36pxB9A194}" TextWrapping="Wrap"/>
-                    <TextBlock Text="{Binding Path=Body}" Name="Description" Style="{StaticResource Text24px847168}"  TextWrapping="Wrap"/>
+                    <TextBlock Text="{Binding Path=Title}" 
+					Name="TitleNews" 
+					Style="{StaticResource Text36pxB9A194}" 
+					TextWrapping="Wrap"/>
+                    <TextBlock Text="{Binding Path=Body}" 
+					Name="Description" 
+					Style="{StaticResource Text24px847168}"  
+					TextWrapping="Wrap"/>
             </StackPanel>
             </ScrollViewer>
         </Grid>
