--- a/wp7-donor/Donor/StationPage.xaml
+++ b/wp7-donor/Donor/StationPage.xaml
@@ -7,6 +7,7 @@
     xmlns:controls="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+	xmlns:toolkitPrimitives="clr-namespace:Microsoft.Phone.Controls.Primitives;assembly=Microsoft.Phone.Controls.Toolkit" xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" 
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="800"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -18,46 +19,92 @@
 
     <!--LayoutRoot contains the root grid where all other page content is placed-->
     <Grid x:Name="LayoutRoot">
+    	<Grid.Background>
+            <ImageBrush ImageSource="images/bg_04.png"/>
+        </Grid.Background>
         <controls:Panorama>
+        	<controls:Panorama.Background>
+            <ImageBrush ImageSource="images/bg_04.png"/>
+        	</controls:Panorama.Background>
             <controls:Panorama.Title>
-                <TextBlock Text="{Binding Title}" Margin="0,80,0,0" FontSize="30"/>
+				<StackPanel Margin="0,90,0,0" >
+                <toolkit:PerformanceProgressBar 
+				HorizontalAlignment="Left" Height="8" 
+				Margin="0" VerticalAlignment="Top" 
+				IsIndeterminate="False" Width="460" Name="LoadingBar" />
+                    <TextBlock 
+					Style="{StaticResource Text24pxWhite}" 
+					Text="{Binding Title}"/>   
+                </StackPanel>
             </controls:Panorama.Title>
+
             <!--Panorama item one-->
-            <controls:PanoramaItem Header="Основное">
-                <Grid>
+            <controls:PanoramaItem>
+            	<controls:PanoramaItem.Header>
+                    <TextBlock Style="{StaticResource Text70pxWhite}" 
+					Text="Основное" Margin="0,30,0,0"/>
+                </controls:PanoramaItem.Header>
+                <Grid Margin="0,10,0,0">
                     <StackPanel>
-                        <TextBlock TextWrapping="Wrap" Text="Адрес" Style="{StaticResource PhoneTextTitle2Style}" />
-                        <TextBlock TextWrapping="Wrap" Text="{Binding Adress}"/>
-                        <TextBlock TextWrapping="Wrap" Text="Телефон" Style="{StaticResource PhoneTextTitle2Style}"/>
-                        <TextBlock TextWrapping="Wrap" Text="{Binding Phone}"/>
-                        <TextBlock Style="{StaticResource PhoneTextTitle2Style}" Text="{Binding RegionalRegistrationString}" TextWrapping="Wrap"/>
-                        <TextBlock Text="Сайт" Style="{StaticResource PhoneTextTitle2Style}" TextWrapping="Wrap"/>
-                        <TextBlock TextWrapping="Wrap" Text="{Binding Url}"/>
+                        <TextBlock TextWrapping="Wrap" 
+						Text="Адрес" 
+						Style="{StaticResource PhoneTextTitle2Style}" />
+                        <TextBlock TextWrapping="Wrap" 
+						Text="{Binding Adress}"/>
+                        <TextBlock TextWrapping="Wrap" 						
+						Text="Телефон" 
+						Style="{StaticResource Text36pxB9A194}"/>
+                        <TextBlock TextWrapping="Wrap" 
+						Text="{Binding Phone}"/>
+                        <TextBlock 
+						Style="{StaticResource Text36pxB9A194}" 
+						Text="{Binding RegionalRegistrationString}" 
+						TextWrapping="Wrap"/>
+                        <TextBlock Text="Сайт" Style="{StaticResource Text36pxB9A194}" 
+						TextWrapping="Wrap"/>
+                        <TextBlock TextWrapping="Wrap" 
+						Text="{Binding Url}"/>
                     </StackPanel>
                 </Grid>
             </controls:PanoramaItem>
 
             <!--Panorama item two-->
-            <controls:PanoramaItem Header="Для доноров">
+            <controls:PanoramaItem>
+            	<controls:PanoramaItem.Header>
+                    <TextBlock Style="{StaticResource Text70pxWhite}" 
+					Text="Для доноров" Margin="0,30,0,0"/>
+                </controls:PanoramaItem.Header>
                 <Grid>
                     <StackPanel>
-                        <TextBlock TextWrapping="Wrap" Text="Время приема" Style="{StaticResource PhoneTextTitle2Style}" />
-                        <TextBlock TextWrapping="Wrap" Text="{Binding ReceiptTime}"/>
-                        <TextBlock TextWrapping="Wrap" Text="Проезд" Style="{StaticResource PhoneTextTitle2Style}"/>
-                        <TextBlock TextWrapping="Wrap" Text="{Binding Transportaion}"/>
-                        <TextBlock TextWrapping="Wrap" Text="Кровь для" Style="{StaticResource PhoneTextTitle2Style}"/>
+                        <TextBlock TextWrapping="Wrap" 
+						Text="Время приема" 
+						Style="{StaticResource Text36pxB9A194}" />
+                        <TextBlock TextWrapping="Wrap" 
+						Text="{Binding Text36pxB9A194}"/>
+                        <TextBlock TextWrapping="Wrap" 
+						Text="Проезд" Style="{StaticResource Text36pxB9A194}"/>
+                        <TextBlock TextWrapping="Wrap" 
+						Text="{Binding Transportaion}"/>
+                        <TextBlock TextWrapping="Wrap" 
+						Text="Кровь для" Style="{StaticResource Text36pxB9A194}"/>
                         <TextBlock Text="{Binding BloodFor}"/>
                     </StackPanel>
                 </Grid>
             </controls:PanoramaItem>
 
-            <controls:PanoramaItem Header="Объявления">
+            <controls:PanoramaItem>
+            	<controls:PanoramaItem.Header>
+                    <TextBlock Style="{StaticResource Text70pxWhite}" 
+					Text="Объявления" Margin="0,30,0,0"/>
+                </controls:PanoramaItem.Header>
                 <Grid>
                     <ListBox Margin="0,0,0,0" ItemsSource="{Binding Ads.Items}" Name="StationAds" SelectionChanged="ListBox_SelectionChanged">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel Margin="0,0,0,17" Width="432" Height="78">
-                                    <TextBlock Text="{Binding Title}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
+                                    <TextBlock Text="{Binding Title}" 
+									TextWrapping="Wrap" 
+									Style="{StaticResource Text36pxB9A194}"/>
                                 </StackPanel>
                             </DataTemplate>
                         </ListBox.ItemTemplate>
@@ -67,7 +114,11 @@
                 </Grid>
             </controls:PanoramaItem>
 
-            <controls:PanoramaItem Header="Отзывы">
+            <controls:PanoramaItem>
+            	<controls:PanoramaItem.Header>
+                    <TextBlock Style="{StaticResource Text70pxWhite}" 
+					Text="Отзывы" Margin="0,30,0,0"/>
+                </controls:PanoramaItem.Header>
                 <Grid>
                     <ScrollViewer>
                         <ListBox 
@@ -77,7 +128,7 @@
                                 <DataTemplate>
                                     <StackPanel Margin="0,10,0,0">
 
-<TextBlock Text="{Binding Username}" Style="{StaticResource PhoneTextTitle2Style}" />
+<TextBlock Text="{Binding Username}" Style="{StaticResource Text36pxB9A194}" />
                                         
 <StackPanel Orientation="Horizontal">
 <TextBlock Text="Оценка: "/>
