--- a/wp7-donor/Donor/CalendarYearPage.xaml
+++ b/wp7-donor/Donor/CalendarYearPage.xaml
@@ -20,11 +20,22 @@
     DataContext="{Binding Path=App.ViewModel,Source=App.ViewModel}">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
+    <Grid x:Name="LayoutRoot">
+    	<Grid.Background>
+            <ImageBrush ImageSource="images/bg_04.png"/>
+        </Grid.Background>
         <!--Pivot Control-->
-        <controls:Pivot Name="Monthes" Title="{Binding Path=Events.CurrentDate}" Loaded="Pivot_Loaded" SelectionChanged="Pivot_SelectionChanged">
+        <controls:Pivot Name="Monthes" 
+		Title="{Binding Path=Events.CurrentDate}" 
+		Loaded="Pivot_Loaded" 
+		SelectionChanged="Pivot_SelectionChanged">
+        	<controls:Pivot.Background>
+            	<ImageBrush ImageSource="images/bg_04.png"/>
+        	</controls:Pivot.Background>
 
-            <controls:PivotItem Name="PrevMonth" Header="{Binding Path=Events.PrevMonthString}" IsEnabled="True">
+            <controls:PivotItem Name="PrevMonth" 
+			Header="{Binding Path=Events.PrevMonthString}" 
+			IsEnabled="True">
                 <Grid>
                     <ListBox Margin="0,0,-12,0" ItemsSource="{Binding Path=Events.PrevMonthItems}" Name="EventsListPrev" Loaded="EventsList_Loaded" SelectionChanged="EventsList_SelectionChanged">
                         <ListBox.ItemTemplate>
