--- a/wp7-donor/Donor/CalendarMonthPage.xaml
+++ b/wp7-donor/Donor/CalendarMonthPage.xaml
@@ -15,16 +15,29 @@
     shell:SystemTray.IsVisible="True" Loaded="PhoneApplicationPage_Loaded">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent" Loaded="LayoutRoot_Loaded">
+    <Grid x:Name="LayoutRoot" Loaded="LayoutRoot_Loaded">
+        <Grid.Background>
+            <ImageBrush ImageSource="images/bg_04.png"/>
+        </Grid.Background>
+        
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <!--TitlePanel contains the name of the application and page title-->
-        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock x:Name="ApplicationTitle" Text="2012" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock x:Name="PageTitle" Text="Июнь" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+        <StackPanel x:Name="TitlePanel" 
+                    Grid.Row="0" Margin="12,17,0,28">
+            <TextBlock 
+                x:Name="ApplicationTitle" 
+                Text="2012" 
+                Style="{StaticResource Text24pxWhite}"/>
+            <TextBlock 
+                x:Name="PageTitle" Text="Июнь" 
+                Margin="10,30,0,0" 
+                
+                
+      Style="{StaticResource Text70pxWhite}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
