--- a/wp7-donor/Donor/Controls/MonthCalendar.xaml
+++ b/wp7-donor/Donor/Controls/MonthCalendar.xaml
@@ -11,27 +11,18 @@
     d:DesignHeight="480" d:DesignWidth="480" Loaded="UserControl_Loaded">
     
     <Grid x:Name="LayoutRoot">
-        <StackPanel>
-        <toolkit:WrapPanel ItemHeight="65" ItemWidth="65">
-                <TextBlock Text="Пн"/>
-                <TextBlock Text="Вт"/>
-                <TextBlock Text="Ср"/>
-                <TextBlock Text="Чт"/>
-                <TextBlock Text="Пт"/>
-                <TextBlock Text="Сб"/>
-                <TextBlock Text="Вс"/>
+        <StackPanel Margin="0,15,0,0">
+            <toolkit:WrapPanel  Background="#FF005258" ItemHeight="35" ItemWidth="65">
+                <TextBlock Width="65" TextAlignment="Center"
+                Style="{StaticResource Text16pxDEAD86}" Text="Пн"/>
+                <TextBlock Width="65" Height="35" VerticalAlignment="Center" TextAlignment="Center" Style="{StaticResource Text16pxDEAD86}" Text="Вт"/>
+                <TextBlock Width="65" Height="35" VerticalAlignment="Center" TextAlignment="Center" Style="{StaticResource Text16pxDEAD86}" Text="Ср"/>
+                <TextBlock Width="65" Height="35" VerticalAlignment="Center" TextAlignment="Center" Style="{StaticResource Text16pxDEAD86}" Text="Чт"/>
+                <TextBlock Width="65" Height="35" VerticalAlignment="Center" TextAlignment="Center" Style="{StaticResource Text16pxDEAD86}" Text="Пт"/>
+                <TextBlock Width="65" Height="35" VerticalAlignment="Center" TextAlignment="Center" Style="{StaticResource Text16pxDEAD86}" Text="Сб"/>
+                <TextBlock Width="65" Height="35" VerticalAlignment="Center" TextAlignment="Center" Style="{StaticResource Text16pxDEAD86}" Text="Вс"/>
             </toolkit:WrapPanel>
-        <toolkit:WrapPanel ItemHeight="65" ItemWidth="65" Name="CalendarDays">
-            <!--<Rectangle Fill="Aqua" Height="60" Width="60"/>
-            <Rectangle Fill="Pink" Height="60" Width="60"/>
-            <Rectangle Fill="Green" Height="60" Width="60"/>
-            <Rectangle Fill="YellowGreen" Height="60" Width="60"/>
-            <Rectangle Fill="Red" Height="60" Width="60"/>
-            <Rectangle Fill="Aqua" Height="60" Width="60"/>
-            <Rectangle Fill="Pink" Height="60" Width="60"/>
-            <Rectangle Fill="Green" Height="60" Width="60"/>
-            <Rectangle Fill="YellowGreen" Height="60" Width="60"/>
-            <Rectangle Fill="Red" Height="60" Width="60"/>-->
+        <toolkit:WrapPanel Background="White" ItemHeight="65" ItemWidth="65" Name="CalendarDays">
         </toolkit:WrapPanel>
         </StackPanel>
     </Grid>
