--- a/wp7-donor/Donor/App.xaml
+++ b/wp7-donor/Donor/App.xaml
@@ -186,6 +186,13 @@
             <Setter Property="Foreground" Value="#9F9F9F"/>
         </Style>
 
+        <Style x:Key="Text16pxDEAD86" TargetType="TextBlock">
+            <Setter Property="FontFamily" Value="Segoe WP Bold"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="Foreground" Value="#DEAD86"/>
+        </Style>
+
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
