--- a/wp7-donor/Donor/Controls/DayInCalendarControl.xaml
+++ b/wp7-donor/Donor/Controls/DayInCalendarControl.xaml
@@ -8,14 +8,30 @@
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
-    d:DesignHeight="56" d:DesignWidth="56">
-    
-    <Grid x:Name="LayoutRoot" Margin="2">
-        <Border BorderThickness="2" BorderBrush="Gray" Name="MainBorder" Background="{Binding BgColor}">
-            <StackPanel Name="MainPanel" Height="50" Width="50">
-                <Image Height="27" Width="27" Name="DayImage" Source="{Binding ImagePath}"/>
-                <TextBlock Margin="2" Foreground="{Binding TextColor}" Text="{Binding DayNumber}"/>
-            </StackPanel>
+    d:DesignHeight="65" d:DesignWidth="65">
+
+    <Border BorderThickness="1" Width="65" Height="65"
+                BorderBrush="Gray" 
+                Name="MainBorder2" Margin="0,0,0,0">
+    <Grid x:Name="LayoutRoot" Background="#FFEEEEEE" Margin="2">
+            <!-- 
+                Background="{Binding BgColor}"
+            -->
+            <Border Name="MainBorder" BorderBrush="#FFAD1F02" BorderThickness="3" Margin="3">
+                <StackPanel Name="MainPanel" Background="{Binding BgColor}" Height="48" Width="48" Margin="0,0,0,0">
+                <TextBlock VerticalAlignment="Center" Height="48" Width="48" 
+                           TextAlignment="Center" 
+                           Margin="2" 
+                           FontSize="28"
+                Foreground="{Binding TextColor}" Text="{Binding DayNumber}"/>
+
+                    <Image Height="25"
+                       Width="25" 
+                           Margin="0,-34,0,0"
+                       Name="DayImage" 
+                       Source="{Binding ImagePath}"/>
+                </StackPanel>
+            </Border>
             <toolkit:ContextMenuService.ContextMenu>
                 <toolkit:ContextMenu Name="ContextMenu">
                     <toolkit:MenuItem Header="Добавить" Name="AddContextMenu" Click="AddContextMenu_Click" />
@@ -24,6 +40,7 @@
                     <toolkit:MenuItem Header="Удалить" Name="DeleteContextMenu" Click="DeleteContextMenu_Click" />
                 </toolkit:ContextMenu>
             </toolkit:ContextMenuService.ContextMenu>
-        </Border>
+        
     </Grid>
+    </Border>
 </UserControl>
